--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
    <select id="dropdown_change">
  
-      <option value="Sunday">Sun</option>
+      <option value="Sunday">Su</option>
  
       <option value="Monday">Mon</option>
  
